ru/cloud-router/cli-ref/v0/index.md
---
editable: false
canonical: https://yandex.cloud/en/docs/cli/cli-ref/cloudrouter/cli-ref/v0/
---

# yc cloudrouter v0

Manage Cloud Router resources

#### Command Usage

Syntax:

`yc cloudrouter v0 <group>`

#### Command Tree

- [yc cloudrouter v0 routing-instance](routing-instance/index.md) — [PREVIEW] Manage routingInstances.

  - [yc cloudrouter v0 routing-instance add-labels](routing-instance/add-labels.md) — Assign labels to a routingInstance.

  - [yc cloudrouter v0 routing-instance add-private-connection](routing-instance/add-private-connection.md) — Add CIC private connection to the routingInstance.

  - [yc cloudrouter v0 routing-instance create](routing-instance/create.md) — Create a routingInstance.

  - [yc cloudrouter v0 routing-instance delete](routing-instance/delete.md) — Delete a routingInstance.

  - [yc cloudrouter v0 routing-instance get](routing-instance/get.md) — Get information about a routingInstance.

  - [yc cloudrouter v0 routing-instance get-by-cic-private-connection-id](routing-instance/get-by-cic-private-connection-id.md) — Get information about a routingInstance by a cic private connection id.

  - [yc cloudrouter v0 routing-instance get-by-vpc-network-id](routing-instance/get-by-vpc-network-id.md) — Get information about a routingInstance by a vpc network id.

  - [yc cloudrouter v0 routing-instance list](routing-instance/list.md) — List routingInstances in a folder.

  - [yc cloudrouter v0 routing-instance list-operations](routing-instance/list-operations.md) — List operations for a routingInstance.

  - [yc cloudrouter v0 routing-instance move](routing-instance/move.md) — Move the specified routing instance into the folder

  - [yc cloudrouter v0 routing-instance move-prefix](routing-instance/move-prefix.md) — Move VPC network prefixes within the routingInstance.

  - [yc cloudrouter v0 routing-instance remove-labels](routing-instance/remove-labels.md) — Remove labels from a routingInstance.

  - [yc cloudrouter v0 routing-instance remove-prefixes](routing-instance/remove-prefixes.md) — Remove announced VPC network prefixes from the routingInstance.

  - [yc cloudrouter v0 routing-instance remove-private-connection](routing-instance/remove-private-connection.md) — Remove CIC private connection from the routingInstance.

  - [yc cloudrouter v0 routing-instance update](routing-instance/update.md) — Modify configuration or attributes of a routingInstance.

  - [yc cloudrouter v0 routing-instance update-networks](routing-instance/update-networks.md) — Update announced VPC network prefixes in the routingInstance.

  - [yc cloudrouter v0 routing-instance update-prefix-mask](routing-instance/update-prefix-mask.md) — Update mask of a VPC network prefix of the routingInstance.

  - [yc cloudrouter v0 routing-instance upsert-prefixes](routing-instance/upsert-prefixes.md) — Upsert announced VPC network prefixes to the routingInstance.

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#